some alignment fixed

--- a/src/components/Style/_slideShow.scss
+++ b/src/components/Style/_slideShow.scss
@@ -1,5 +1,6 @@
 .slideshow-container {
-    width: 1200px;
+    position: relative;
+    width: 700px;
     margin-right: auto;
     margin-left: auto;
     /* background-color: #f5f5f5; */
@@ -34,6 +35,42 @@
         }
     
 
+    }
+
+}
+
+@media (max-width: 760px) {
+    body{
+        display: flex;
+        justify-items: center;
+        align-items: center;
+        position: relative;
+    }
+    .slideshow-container{
+        position: relative;
+        width:600px;
+        display: flex;
+        flex-direction: row-reverse;
+
+        .left-section{
+            flex: 4;
+            .image-gallery-content {
+                border: 5px solid #132a13;
+               border-radius: 0px;
+               .image-gallery-slide img {
+                width: 100%;
+                height: 450px;
+                 max-height: 80vh; 
+                object-fit: cover;
+                overflow: hidden;
+                object-position: center center;
+            }
+          
+           }
+
+            
+        }
+       
     }
 
 }
