--- a/src/components/Style/book.scss
+++ b/src/components/Style/book.scss
@@ -3,10 +3,10 @@
 /* Book */
 
 .book {
-    margin-top: 32px;
+    margin: 25px 25px;
     position: relative;
-    width: 550px;
-    height: 700px;
+    width: 400px;
+    height: 530px;
    
     transition: transform 0.5s;
     
@@ -82,3 +82,12 @@
         z-index: 1;
     }
 
+    @media (max-width: 760px) {
+      .book {
+        
+        position: relative;
+        width: 400px;
+        height: 530px;
+       
+    }
+  }
